refactor: replace hardcoded "nourished" strings with Nourished.MODID, add warn logging to silent IOException catches